--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,7 +11,7 @@ status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
   #cname: demo.upptime.js.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
-  # baseUrl: /upptime
+  baseUrl: /vinacis
   logoUrl: https://vinacis.com/img/logo.png
   name: Vinacis
   introTitle: "Vinacis"
